<resources>
    <string name="app_name">Gallery</string>

    <string name="no_address_message">Local IP address not set</string>
    <string name="error_message">Error connecting with server</string>
    <string name="folder_empty_message">Folder is empty</string>


    <string name="no_address_icon_description">No address</string>
    <string name="set_server_menu_title">Set server address</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="file_item">File item</string>
    <string name="folder_cover_image">Folder cover image</string>

    <plurals name="folder_item_count_text">
        <item quantity="one">%d element</item>
        <item quantity="other">%d elements</item>
    </plurals>

    <string name="image_icon">Image icon</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="file_image_view_desc">File</string>
    <string name="search_menu">Search</string>
    <string name="search_hint">Search folders…</string>
    <string name="video_type">video</string>
    <string name="video_length_placeholder">0:00</string>
    <string name="folders">Folders</string>
    <string name="retry">Retry</string>

    <!-- Folders list-->
    <string name="night_mode">Night mode</string>
    <string name="autoplay">Autoplay</string>
    <string name="open_item_menu">Open item menu</string>
    <plurals name="folders_updated_text">
        <item quantity="one">Modified %d folder</item>
        <item quantity="other">Modified %d folders</item>
    </plurals>

    <!-- Files list-->
    <string name="files">Files</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="creation_date">Creation date</string>
    <string name="last_modified">Last modified</string>
    <string name="type">Type</string>
    <string name="order">Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="done">Done</string>
    <string name="files_toolbar_title">All files</string>
    <string name="file_selection_icon">selection icon</string>
    <string name="add_tag">Add tag</string>
    <plurals name="files_updated_text">
        <item quantity="one">Modified %d element</item>
        <item quantity="other">Modified %d elements</item>
    </plurals>
    <string name="open_folder">Open folder</string>

    <!-- File details-->
    <string name="created">Created:</string>
    <string name="modified">Modified:</string>
    <string name="edit_tags">Edit tags</string>
    <string name="cover_btn_description">set as cover</string>

    <!-- Server search-->
    <string name="server_address_hint">E.g. 172.16.254.1</string>
    <string name="servers_found">Servers found:</string>
    <string name="search_servers">Search servers</string>
    <string name="server_dialog_title">Set server address</string>
    <string name="toggle_audio">toggle audio</string>
    <string name="add_tag_label">Type tag</string>

    <!-- Sorting dialog-->
    <string name="clear_tags">Clear tags</string>
    <string name="select_folders">Select folders</string>

</resources>
