<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView android:id="@+id/file_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/file_item"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_gravity="center_vertical"
        tools:srcCompat="@drawable/ic_image_24dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:padding="8dp"
        android:contentDescription="@string/video_type"
        app:srcCompat="@drawable/ic_play_circle_outline_black_24dp"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:text="@string/video_length_placeholder"
        android:textColor="@android:color/white"
        android:padding="8dp"/>

    <ImageView
        android:id="@+id/selected_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_twotone_circle_24"
        tools:visibility="visible"
        android:contentDescription="selection icon" />

</FrameLayout>
