<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="?android:colorBackground">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_top"
            app:srcCompat="@drawable/ic_image_24dp" />

        <TextView
            android:id="@+id/file_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/open_folder_button"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:text="dummy_file_name.jpg" />

        <TextView
            android:id="@+id/folder_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/file_name_text"
            app:layout_constraintStart_toStartOf="@+id/file_name_text"
            app:layout_constraintTop_toBottomOf="@+id/file_name_text"
            tools:text="folder name"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/open_folder_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/open_folder"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:srcCompat="@drawable/baseline_folder_24"
            app:tint="?colorOnSurface"
            tools:visibility="visible"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="8dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="file_name_text,folder_text,imageView, open_folder_button" />

        <TextView
            android:id="@+id/file_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/file_name_text"
            app:layout_constraintStart_toStartOf="@+id/file_name_text"
            app:layout_constraintTop_toBottomOf="@+id/barrier_bottom"
            tools:text="1000x500" />

        <TextView
            android:id="@+id/creation_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/dates_barrier"
            app:layout_constraintTop_toBottomOf="@+id/file_size"
            tools:text="21 Oct 2021" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/created"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_size" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/dates_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="textView4, textView3"/>

        <TextView
            android:id="@+id/modified_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@id/dates_barrier"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:text="22 Oct 2021" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/modified"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="32dp"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modified_date">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tags_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

        </androidx.core.widget.NestedScrollView>

        <ImageButton
            android:id="@+id/edit_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:contentDescription="@string/edit_tags"
            app:layout_constraintBottom_toBottomOf="@+id/modified_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            app:tint="?colorOnSurface" />

        <ImageButton
            android:id="@+id/open_link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/open_in_browser"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="4dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/edit_btn"
            app:layout_constraintEnd_toStartOf="@id/edit_btn"
            app:layout_constraintTop_toTopOf="@+id/edit_btn"
            app:srcCompat="@drawable/ic_open_in_browser_black_24dp"
            app:tint="#2196F3" />

        <ImageButton
            android:id="@+id/set_cover_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/cover_btn_description"
            app:layout_constraintBottom_toBottomOf="@+id/edit_btn"
            app:layout_constraintEnd_toStartOf="@+id/open_link_button"
            app:layout_constraintTop_toTopOf="@+id/edit_btn"
            app:srcCompat="@drawable/ic_baseline_photo_album_24"
            app:tint="?colorOnSurface" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>